--- a/FirstAirdropFerma/FirstAirdropFerma.csproj
+++ b/FirstAirdropFerma/FirstAirdropFerma.csproj
@@ -11,4 +11,12 @@
       <PackageReference Include="Nethereum.Web3" Version="4.25.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="NetworkInteraction\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WebInteracting\WebInteracting.csproj" />
+    </ItemGroup>
+
 </Project>
